@@ -137,6 +137,12 @@ noise_tune on
 # Comment out to disable
 despeckle EedDl
 
+# Detect motion in predefined areas (1 - 9). Areas are numbered like that:  1 2 3
+# A script (on_area_detected) is started immediately when motion is         4 5 6
+# detected in one of the given areas, but only once during an event.        7 8 9
+# One or more areas can be specified with this option. (Default: not defined)
+; area_detect value
+
 # PGM file to use as a sensitivity mask.
 # Full path name to. (Default: not defined)
 ; mask_file value
@@ -485,6 +491,10 @@ quiet on
 
 # Command to be executed when a motion frame is detected (default: none)
 ; on_motion_detected value
+
+# Command to be executed when motion in a predefined area is detected
+# Check option 'area_detect'.   (default: none)
+; on_area_detected value
 
 # Command to be executed when a movie file (.mpg|.avi) is created. (default: none)
 # To give the filename as an argument to a command append it with %f
